# api/v1/oas_request_encoders_gen.go
@@ -11,8 +11,50 @@ import (
 	ht "github.com/ogen-go/ogen/http"
 )
 
+func encodeAddMetadataFormatRequest(
+	req *AddMetadataFormatRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeAddRecordRequest(
 	req *AddRecordRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeAddSetRequest(
+	req *AddSetRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeDeleteRecordRequest(
+	req *DeleteRecordRequest,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
