# api/v1/oas_response_encoders_gen.go
@@ -11,16 +11,31 @@ import (
 	"go.opentelemetry.io/otel/trace"
 )
 
-func encodeAddRecordResponse(response *AddRecordResponse, w http.ResponseWriter, span trace.Span) error {
-	w.Header().Set("Content-Type", "application/json")
+func encodeAddMetadataFormatResponse(response *AddMetadataFormatOK, w http.ResponseWriter, span trace.Span) error {
 	w.WriteHeader(200)
 	span.SetStatus(codes.Ok, http.StatusText(200))
 
-	e := jx.GetEncoder()
-	response.Encode(e)
-	if _, err := e.WriteTo(w); err != nil {
-		return errors.Wrap(err, "write")
-	}
+	return nil
+}
+
+func encodeAddRecordResponse(response *AddRecordOK, w http.ResponseWriter, span trace.Span) error {
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	return nil
+}
+
+func encodeAddSetResponse(response *AddSetOK, w http.ResponseWriter, span trace.Span) error {
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	return nil
+}
+
+func encodeDeleteRecordResponse(response *DeleteRecordOK, w http.ResponseWriter, span trace.Span) error {
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
 	return nil
 }
 
